# auto_tag

./: .dockerignore  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
auto_tag/: .env.example  README.md  __init__.py  config.example.json  config.json  config.json.bak  constant.py  export_compact_labels.py  main.py  plan.md  promt.md  requirements-web.txt  requirements.txt  view_db.py
auto_tag/backend/: __init__.py  app.py  export_path_utils.py  job_runner.py  job_store.py  public_json.py
auto_tag/core/: __init__.py  annotator.py  circuit_breaker.py  cluster_engine.py  compact_labels_export.py  config.py  config_file_params.py  database_maintenance.py  db_build_snapshot.py  duplicate_store.py  feature_extractor.py  image_load_context.py  path_prefix_registry.py  pipeline.py  pipeline_profile.py  vector_db.py  vlm_annotation_pool.py  vlm_client.py  vlm_endpoint_stats_store.py  vlm_model_utils.py  vlm_timing_collector.py  vlm_timing_report.py
auto_tag/frontend_streamlit/: api_client.py  app.py
auto_tag/notes/: IMPLEMENTATION_AND_ARCHITECTURE.md  PLAN_ARCHIVE.md
auto_tag/scripts/: _conda_agent_d.sh  bench_vlm_timing_compare.py  capture_vlm_http_trace.py  plot_vlm_timing.py  print_vlm_http_trace.py  run_trial_front.sh  run_web_backend.sh  run_web_frontend.sh  run_web_frontend_v2.sh
auto_tag/test/: auto_tag_job.json  auto_tag_job_2.json
auto_tag/web/: index.html  package-lock.json  package.json  vite.config.ts
notes/: README.md  Release_Record.md
notes/for_developer/: ARCHITECTURE.md  DATABASE_EXPORT_BOX.md  DATABASE_UPDATE_BOX.md  EXTENDING.md  README.md
notes/for_test/: 01_标注任务_JSON加载与提交.md  README.md
scripts/linux/: _uv_env.sh  ensure_uv.sh  restart_web.sh  restart_web_backend.sh  run_trial_front.sh  run_web_backend.sh  run_web_frontend_v2.sh  setup_uv_env.sh  start_web.sh  stop_web.sh  test_uv.sh
scripts/windows/: _uv_env.ps1  ensure_uv.ps1  restart_web.bat  restart_web.ps1  setup_uv_env.ps1  (+9 more)
(+39 files in other folders)
