[project]
name = "kevin-auto-tag"
version = "0.0.3"
description = "Image auto annotation pipeline (CLIP + ChromaDB + VLM)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.22",
    "opencv-python-headless>=4.8.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.36.0",
    "Pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.3",
    "httpx>=0.27.0",
    "kevin_toolbox>=1.4.14",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.39.0",
]

[tool.uv]
package = false
