[project]
name = "kevin-auto-tag"
version = "0.0.3"
description = "Image auto annotation pipeline (CLIP + ChromaDB + VLM)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.22",
    "opencv-python-headless>=4.8.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.36.0",
    "Pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.3",
    "httpx>=0.27.0",
    "kevin_toolbox>=1.4.14",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.39.0",
]

[tool.uv]
package = false

# Windows/Linux 使用 PyTorch 官方 CUDA 12.6 wheel；macOS 无 CUDA 构建，回退 PyPI。
# 避免 uv sync 在 Windows 上装回 PyPI 的 CPU 版 torch。
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
